# triangulation

./: .gitignore  CMakeLists.txt  Doxyfile
DOCS/HTML_DOCS/: DCEL_8h_source.html  Graphix_8h_source.html  LSISegment_8h_source.html  Point-example.html  Polygon_8h_source.html  TriangulatorGraphix_8h_source.html  Triangulator_8h_source.html  annotated.html  classConvexHullGraphix.html  classDCEL-members.html  classDCEL.html  classFace-members.html  classFace.html  classFace__coll__graph.dot  classFace__coll__graph.md5  classGraphix-members.html  classGraphix.html  classGraphix__inherit__graph.dot  classGraphix__inherit__graph.md5  classHalfEdge-members.html  classHalfEdge.html  classHalfEdge__coll__graph.dot  classHalfEdge__coll__graph.md5  classLSISegment-members.html  classLSISegment.html  classLSISegment__coll__graph.dot  classLSISegment__coll__graph.md5  classLSISegment__inherit__graph.dot  classLSISegment__inherit__graph.md5  classLineSegment-members.html  classLineSegment.html  classLineSegment__coll__graph.dot  (+65 more)
src/: DCEL.cpp  DCEL.h  EventQueue.tpp  Graphix.cpp  Graphix.h  LSISegment.cpp  LSISegment.h  Polygon.cpp  Polygon.h  Status.tpp  Triangulator.cpp  Triangulator.h  TriangulatorGraphix.cpp  TriangulatorGraphix.h  main.cpp  primitives.cpp  primitives.h
testcases/: actual_time.txt  create_report.py  create_testcases.py  default_case.txt  input1.txt  input2.txt  input3.txt  input4.txt  running_time.txt  size_10.txt  size_100.txt  size_1000.txt  size_10000.txt  size_2000.txt  size_3000.txt  size_4000.txt  size_5.txt  size_50.txt  size_500.txt  size_5000.txt
(+100 files in other folders)
